Fixed overflow in main-right content

--- a/resources/public/css/refheap.css
+++ b/resources/public/css/refheap.css
@@ -95,6 +95,7 @@ div#main-right {
     float: right;
     margin-right: 2px;
     margin-top: 41px;
+    overflow: scroll;
 }
 
 div#main-right ul li {
